<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/rsrp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/rsrp_label"/>

    <TextView
        android:id="@+id/rsrq_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rsrp_value"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/rsrq_label"/>

    <TextView
        android:id="@+id/sinr_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rsrq_value"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/sinr_label"/>

    <TextView
        android:id="@+id/rssi_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sinr_value"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/rssi_label"/>

    <TextView
        android:id="@+id/cell_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rssi_value"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/cell_id_label"/>

    <TextView
        android:id="@+id/network_type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cell_id_value"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/network_type_label"/>

    <TextView
        android:id="@+id/latitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/network_type_value"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/lat_label"/>

    <TextView
        android:id="@+id/longitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/latitude_value"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/lng_label"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>