<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/interval_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sampling_interval_label"
        android:labelFor="@+id/interval_spinner"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"/>

    <Spinner
        android:id="@+id/interval_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/interval_label"
        android:layout_marginHorizontal="16dp"
        android:contentDescription="@string/sampling_interval_label"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/background_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/background_logging"
        app:layout_constraintTop_toBottomOf="@id/interval_spinner"
        android:layout_margin="16dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/wifi_only_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wifi_only"
        app:layout_constraintTop_toBottomOf="@id/background_switch"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btn_test_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_test_connection"
        app:layout_constraintTop_toBottomOf="@id/wifi_only_switch"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>